@@ -36,7 +36,6 @@ import java.net.URI;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 import java.util.UUID;
@@ -124,8 +123,8 @@ class RecipeLifecycleTest implements RewriteTest {
           ));
     }
 
-    @Value
     @EqualsAndHashCode(callSuper = false)
+    @Value
     static class ErrorDuringScanningPhase extends ScanningRecipe<Integer> {
 
         @Override
@@ -158,8 +157,8 @@ class RecipeLifecycleTest implements RewriteTest {
         }
     }
 
-    @Value
     @EqualsAndHashCode(callSuper = false)
+    @Value
     static class DeleteFirst extends Recipe {
 
         @Override
@@ -175,7 +174,7 @@ class RecipeLifecycleTest implements RewriteTest {
 
         @Override
         public List<Recipe> getRecipeList() {
-            return Arrays.asList(
+            return List.of(
               new DeleteSourceFiles("test.txt"),
               new FindAndReplace("test", "", null, null, null, null, null, null));
         }
@@ -302,7 +301,6 @@ class RecipeLifecycleTest implements RewriteTest {
         }
     }
 
-    @DocumentExample
     @Test
     void accurateReportingOfRecipesMakingChanges() {
         rewriteRun(
@@ -518,8 +516,8 @@ class DefaultConstructorRecipe extends Recipe {
     }
 }
 
-@SuppressWarnings("unused") // referenced in yaml
-@NoArgsConstructor
+@NoArgsConstructor // referenced in yaml
+@SuppressWarnings("unused")
 class NoArgRecipe extends Recipe {
     @Override
     public String getDisplayName() {
